[@mantine/dates] TimePicker: Fix custom amPmLabels being truncated in input and dropdown (#8336)
Fixed an issue where custom AM/PM labels would be cut off both in the input field and dropdown list. The fix uses dynamic sizing for the AM/PM input field based on label length and allows dropdown controls to expand to fit their content.

--- a/packages/@mantine/dates/src/components/TimePicker/TimePicker.module.css
+++ b/packages/@mantine/dates/src/components/TimePicker/TimePicker.module.css
@@ -31,7 +31,8 @@
 
 .control {
   text-align: center;
-  width: 2.5em;
+  min-width: 2.5em;
+  width: max-content;
   height: 2em;
   border-radius: var(--mantine-radius-default);
   font-size: var(--control-font-size, var(--mantine-font-size-sm));
@@ -132,7 +133,7 @@
   appearance: none;
 
   &:where([data-am-pm]) {
-    width: calc(3ch + 0.3em);
+    width: auto;
   }
 
   &:where(:disabled) {
